main/default/objects/Activity_Criteria__c/Activity_Criteria__c.object-meta.xml
<CustomObject>
    <label>Activity Criteria</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Activity Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>