main/default/objects/Activity_Criteria__c/fields/Activity_Match__c.field-meta.xml
<CustomField>
    <fullName>Activity_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Match</label>
    <referenceTo>Activity_Match__c</referenceTo>
    <relationshipLabel>Activity Criterias</relationshipLabel>
    <relationshipName>Activity_Criterias</relationshipName>
    <type>Lookup</type>
</CustomField>