main/default/objects/Activity_Criteria__c/fields/Criteria_Description__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Description__c</fullName>
    <label>Criteria Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>