main/default/objects/Activity_Criteria__c/fields/Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Type__c</fullName>
    <label>Criteria Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Substantial Contribution</fullName>
                <default>true</default>
                <label>Substantial Contribution</label>
            </value>
            <value>
                <fullName>Do No Significant Harm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>