main/default/objects/Activity_Criteria__c/fields/DNSH_to_Objective__c.field-meta.xml
<CustomField>
    <fullName>DNSH_to_Objective__c</fullName>
    <label>DNSH to Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Climate adaptation</fullName>
                <default>true</default>
                <label>Climate adaptation</label>
            </value>
            <value>
                <fullName>Climate mitigation</fullName>
            </value>
            <value>
                <fullName>Biodiversity</fullName>
            </value>
            <value>
                <fullName>Pollution prevention</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Circular economy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>