main/default/objects/Activity_Criteria__c/fields/Environmental_Objective__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environmental Objective</label>
    <referenceTo>Environmental_Objective__c</referenceTo>
    <relationshipLabel>Activity Criterias</relationshipLabel>
    <relationshipName>Activity_Criterias</relationshipName>
    <type>Lookup</type>
</CustomField>