main/default/objects/Activity_Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_Id__c</columns>
    <columns>Environmental_Objective__c</columns>
    <columns>Criteria_Type__c</columns>
    <columns>Activity_Match__c</columns>
    <columns>DNSH_to_Objective__c</columns>
    <columns>Criteria_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>